Improve documentation on setting arbitray transform origin points transformOriginPoint is undocumented for a reason.  It shouldn't be used by Item.  Added some docs to assist find the right way, i.e. Scale and Rotation elements.

Task-number: QTBUG-12265