src/declarative/graphicsitems/qdeclarativeitem.cpp
@@ -1514,6 +1514,9 @@ QDeclarativeItem::~QDeclarativeItem()
     \endqml
 
     The default transform origin is \c Item.Center.
+
+    To set an arbitrary transform origin point use the \l Scale or \l Rotation
+    transform elements.
 */
 
 /*!
@@ -2192,6 +2195,8 @@ void QDeclarativeItem::setBaselineOffset(qreal offset)
   }
   \endqml
   \endtable
+
+  \sa transform, Rotation
 */
 
 /*!
@@ -2228,6 +2233,8 @@ void QDeclarativeItem::setBaselineOffset(qreal offset)
   }
   \endqml
   \endtable
+
+  \sa transform, Scale
 */
 
 /*!
